--- a/res/layout/map.xml
+++ b/res/layout/map.xml
@@ -5,9 +5,13 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <org.osmdroid.views.MapView
-            android:id="@+id/mapview"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent" />
+    <com.mapquest.android.maps.MapView
+        android:id="@+id/map"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:clickable="true"
+        android:enabled="true"
+        android:apiKey="@string/mapquest_api_key" />
+
 
 </LinearLayout>
