--- a/res/layout/map.xml
+++ b/res/layout/map.xml
@@ -4,14 +4,9 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-
-    <com.mapquest.android.maps.MapView
+    <org.osmdroid.views.MapView
         android:id="@+id/map"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:clickable="true"
-        android:enabled="true"
-        android:apiKey="@string/mapquest_api_key" />
-
-
+        android:enabled="true" />
 </LinearLayout>
