adds locate me button

--- a/res/layout/map.xml
+++ b/res/layout/map.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
@@ -9,4 +9,13 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:enabled="true" />
-</LinearLayout>
+    <Button
+        android:id="@+id/locate_me"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="15dp"
+        android:layout_marginRight="15dp"
+        android:text="+" />
+</RelativeLayout>
