--- a/app/src/main/res/layout/fragment_search_results.xml
+++ b/app/src/main/res/layout/fragment_search_results.xml
@@ -3,7 +3,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:id="@+id/results_wrapper"
+              android:visibility="gone">
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/results"
               android:layout_width="wrap_content"
