--- a/app/src/main/res/layout/fragment_search_results.xml
+++ b/app/src/main/res/layout/fragment_search_results.xml
@@ -6,9 +6,10 @@
               android:layout_height="match_parent"
               android:id="@+id/results_wrapper"
               android:visibility="gone">
-    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/results"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:background="#AAFFFFFF" />
+    <android.support.v4.view.ViewPager
+        android:id="@+id/results"
+        android:layout_height="100dp"
+        android:layout_width="fill_parent"
+        android:layout_alignParentBottom="true"
+        android:background="@android:color/holo_green_light" />
 </LinearLayout>
