--- a/app/src/main/res/layout/fragment_search_results.xml
+++ b/app/src/main/res/layout/fragment_search_results.xml
@@ -6,6 +6,14 @@
               android:layout_height="match_parent"
               android:id="@+id/results_wrapper"
               android:visibility="gone">
+    <TextView
+        android:id="@+id/indicator"
+        android:layout_height="wrap_content"
+        android:layout_width="fill_parent" />
+    <Button android:id="@+id/view_all"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="view all >>" />
     <android.support.v4.view.ViewPager
         android:id="@+id/results"
         android:layout_height="100dp"
