--- a/app/src/main/res/layout/base.xml
+++ b/app/src/main/res/layout/base.xml
@@ -18,4 +18,12 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="50dp"
         class="com.mapzen.fragment.SearchResultsFragment" />
+
+    <LinearLayout
+        android:id="@+id/place_result"
+        android:background="@android:color/darker_gray"
+        android:layout_alignParentBottom="true"
+        android:layout_height="50dp"
+        android:layout_width="wrap_content">
+    </LinearLayout>
 </RelativeLayout>
