--- a/app/src/main/res/layout/base.xml
+++ b/app/src/main/res/layout/base.xml
@@ -6,19 +6,14 @@
     <fragment
         android:id="@+id/map_fragment"
         android:layout_width="match_parent"
-        android:layout_weight="2"
         android:layout_height="match_parent"
         class="com.mapzen.fragment.MapFragment" />
-
     <fragment
         android:id="@+id/search_results_fragment"
         android:layout_width="match_parent"
-        android:layout_weight="1"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="50dp"
         class="com.mapzen.fragment.SearchResultsFragment" />
-
     <LinearLayout
         android:id="@+id/place_result"
         android:background="@android:color/darker_gray"
