--- a/app/src/main/res/layout/fragment_search_results.xml
+++ b/app/src/main/res/layout/fragment_search_results.xml
@@ -3,7 +3,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_height="wrap_content"
               android:id="@+id/results_wrapper"
               android:visibility="gone">
     <TextView
@@ -16,8 +16,8 @@
         android:text="view all >>" />
     <android.support.v4.view.ViewPager
         android:id="@+id/results"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:layout_width="fill_parent"
         android:layout_alignParentBottom="true"
-        android:background="@android:color/holo_green_light" />
+        android:background="@android:color/darker_gray" />
 </LinearLayout>
