--- a/app/src/main/res/layout/fragment_search_results.xml
+++ b/app/src/main/res/layout/fragment_search_results.xml
@@ -6,18 +6,27 @@
               android:layout_height="wrap_content"
               android:id="@+id/results_wrapper"
               android:visibility="gone">
-    <TextView
-        android:id="@+id/indicator"
+    <RelativeLayout
         android:layout_height="wrap_content"
-        android:layout_width="fill_parent" />
-    <Button android:id="@+id/view_all"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:text="view all >>" />
+        android:layout_width="match_parent"
+        android:background="@android:color/darker_gray">
+        <TextView
+            android:id="@+id/pagination"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
+            android:padding="3dp"
+            android:layout_centerVertical="true" />
+        <Button android:id="@+id/view_all"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="View All" />
+    </RelativeLayout>
     <android.support.v4.view.ViewPager
         android:id="@+id/results"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
-        android:layout_alignParentBottom="true"
-        android:background="@android:color/darker_gray" />
+        android:layout_alignParentBottom="true" />
 </LinearLayout>
