--- a/app/src/main/res/layout/fragment_search_results.xml
+++ b/app/src/main/res/layout/fragment_search_results.xml
@@ -22,6 +22,8 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_alignParentRight="true"
+            android:padding="3dp"
+            android:background="@android:color/darker_gray"
             android:text="View All" />
     </RelativeLayout>
     <android.support.v4.view.ViewPager
