firming up the single place view

--- a/app/src/main/res/layout/base.xml
+++ b/app/src/main/res/layout/base.xml
@@ -15,9 +15,8 @@
         class="com.mapzen.fragment.SearchResultsFragment" />
     <LinearLayout
         android:id="@+id/place_result"
-        android:background="@android:color/darker_gray"
         android:layout_alignParentBottom="true"
-        android:layout_height="50dp"
-        android:layout_width="wrap_content">
+        android:layout_height="100dp"
+        android:layout_width="match_parent">
     </LinearLayout>
 </RelativeLayout>
