--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,7 @@
         <item name="android:actionBarStyle">@style/MyActionBar</item>
         <item name="android:buttonStyle">@android:style/Widget.Button</item>
         <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:icon">@android:color/transparent</item>
     </style>
 
     <!-- ActionBar styles -->
