--- a/app/src/main/res/layout/fragment_search_results.xml
+++ b/app/src/main/res/layout/fragment_search_results.xml
@@ -9,6 +9,8 @@
     <RelativeLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
         android:background="@android:color/darker_gray">
         <TextView
             android:id="@+id/pagination"
@@ -24,7 +26,7 @@
             android:layout_alignParentRight="true"
             android:padding="3dp"
             android:background="@android:color/darker_gray"
-            android:text="View All" />
+            android:text="View All &#187;" />
     </RelativeLayout>
     <android.support.v4.view.ViewPager
         android:id="@+id/results"
