--- a/app/src/main/res/layout/base.xml
+++ b/app/src/main/res/layout/base.xml
@@ -13,4 +13,13 @@
         android:layout_height="120dp"
         android:layout_alignParentBottom="true"
         class="com.mapzen.fragment.SearchResultsFragment" />
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/black"
+        android:visibility="gone"
+        tools:context="com.mapzen.activity.BaseActivity"
+        tools:ignore="MergeRootFrame" />
 </RelativeLayout>
