fixing lint issues

--- a/app/src/main/res/layout/fragment_search_results.xml
+++ b/app/src/main/res/layout/fragment_search_results.xml
@@ -32,5 +32,5 @@
         android:id="@+id/results"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
-        android:layout_alignParentBottom="true" />
+        android:layout_gravity="bottom" />
 </LinearLayout>
