--- a/app/src/main/res/layout/route_widget.xml
+++ b/app/src/main/res/layout/route_widget.xml
@@ -9,13 +9,13 @@
         android:id="@+id/instruction_title"
         android:layout_width="match_parent"
         android:textColor="#FFFFFF"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/instruction_street"
         android:layout_width="match_parent"
         android:textColor="#FFFFFF"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:layout_below="@id/instruction_title"
         android:layout_height="wrap_content" />
     <Button
