--- a/app/src/main/res/layout/fragment_search_results.xml
+++ b/app/src/main/res/layout/fragment_search_results.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:id="@+id/results_wrapper"
-              android:visibility="gone">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/results_wrapper"
+    android:visibility="gone">
+
     <RelativeLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
         android:background="@android:color/darker_gray">
+
         <TextView
             android:id="@+id/pagination"
             android:layout_height="wrap_content"
@@ -20,14 +22,17 @@
             android:textStyle="bold"
             android:padding="3dp"
             android:layout_centerVertical="true" />
-        <Button android:id="@+id/view_all"
+
+        <Button
+            android:id="@+id/view_all"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_alignParentRight="true"
             android:padding="3dp"
             android:background="@android:color/darker_gray"
-            android:text="View All &#187;" />
+            android:text="@string/view_all" />
     </RelativeLayout>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/results"
         android:layout_height="wrap_content"
