--- a/app/src/main/res/layout/route_widget.xml
+++ b/app/src/main/res/layout/route_widget.xml
@@ -4,21 +4,24 @@
     android:layout_gravity="fill_horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <TextView
         android:id="@+id/instruction_title"
         android:layout_width="match_parent"
         android:textSize="20sp"
         android:layout_height="wrap_content" />
+
     <TextView
         android:id="@+id/instruction_street"
         android:layout_width="match_parent"
         android:textSize="20sp"
         android:layout_below="@id/instruction_title"
         android:layout_height="wrap_content" />
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Next"
+        android:text="@string/route_next"
         android:id="@+id/next_btn"
         android:layout_alignParentRight="true" />
 </RelativeLayout>
