--- a/app/src/main/res/layout/fragment_search_results.xml
+++ b/app/src/main/res/layout/fragment_search_results.xml
@@ -4,9 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/results_wrapper"
-    android:visibility="gone">
-
+    android:id="@+id/results_wrapper">
     <RelativeLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
