--- a/app/src/main/res/layout/base.xml
+++ b/app/src/main/res/layout/base.xml
@@ -3,22 +3,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <fragment
-        android:id="@+id/map_fragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        class="com.mapzen.fragment.MapFragment" />
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/results_container"
         android:layout_width="match_parent"
         android:layout_height="120dp"
+        android:layout_alignParentBottom="true"
         android:background="@android:color/white"
         android:visibility="gone"
-        android:layout_alignParentBottom="true"
         tools:context="com.mapzen.activity.BaseActivity"
         tools:ignore="MergeRootFrame" />
+
+    <fragment
+        android:id="@+id/map_fragment"
+        android:layout_above="@id/results_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        class="com.mapzen.fragment.MapFragment" />
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
