renaming view containers

--- a/app/src/main/res/layout/base.xml
+++ b/app/src/main/res/layout/base.xml
@@ -6,7 +6,7 @@
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/results_container"
+        android:id="@+id/top_container"
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:layout_alignParentBottom="true"
@@ -17,14 +17,14 @@
 
     <fragment
         android:id="@+id/map_fragment"
-        android:layout_above="@id/results_container"
+        android:layout_above="@id/top_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         class="com.mapzen.fragment.MapFragment" />
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/container"
+        android:id="@+id/bottom_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/black"
