--- a/app/src/main/res/layout/route_widget.xml
+++ b/app/src/main/res/layout/route_widget.xml
@@ -1,27 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_gravity="fill_horizontal"
+<android.support.v4.view.ViewPager
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/routes"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="120dp" />
 
-    <TextView
-        android:id="@+id/instruction_title"
-        android:layout_width="match_parent"
-        android:textSize="20sp"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/instruction_street"
-        android:layout_width="match_parent"
-        android:textSize="20sp"
-        android:layout_below="@id/instruction_title"
-        android:layout_height="wrap_content" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/route_next"
-        android:id="@+id/next_btn"
-        android:layout_alignParentRight="true" />
-</RelativeLayout>
