--- a/app/src/main/res/layout/fragment_instruction.xml
+++ b/app/src/main/res/layout/fragment_instruction.xml
@@ -11,8 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_margin="@dimen/default_margin"
         android:padding="@dimen/default_button_padding"
+        android:visibility="invisible"
         android:background="@null"
         android:src="@drawable/ic_wh_previous" />
 
@@ -39,6 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:padding="@dimen/default_button_padding"
+        android:visibility="invisible"
         android:background="@null"
         android:src="@drawable/ic_wh_next" />
 
