adds full list fragment

--- a/app/src/main/res/layout/base.xml
+++ b/app/src/main/res/layout/base.xml
@@ -21,6 +21,13 @@
         android:layout_height="wrap_content"
         class="com.mapzen.fragment.MapFragment" />
 
+    <FrameLayout
+        android:id="@+id/full_list"
+        android:background="@android:color/white"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/bottom_container"
