--- a/app/src/main/res/layout/full_results_list.xml
+++ b/app/src/main/res/layout/full_results_list.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <ListView
-        android:id="@+id/full_list"
+        android:id="@android:id/list"
         android:layout_marginTop="?android:attr/actionBarSize"
         android:layout_height="match_parent"
         android:layout_width="match_parent" />
