--- a/app/src/main/res/layout/base.xml
+++ b/app/src/main/res/layout/base.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <FrameLayout
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/top_container"
         android:layout_width="match_parent"
@@ -28,7 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <FrameLayout
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/bottom_container"
         android:layout_width="match_parent"
