--- a/app/src/main/res/layout/full_results_list.xml
+++ b/app/src/main/res/layout/full_results_list.xml
@@ -7,7 +7,8 @@
 
     <ListView
         android:id="@android:id/list"
-        android:layout_marginTop="?android:attr/actionBarSize"
+        android:paddingTop="?android:attr/actionBarSize"
+        android:background="@android:color/white"
         android:layout_height="match_parent"
         android:layout_width="match_parent" />
 </LinearLayout>
