--- a/app/src/main/res/layout/route_widget.xml
+++ b/app/src/main/res/layout/route_widget.xml
@@ -3,6 +3,7 @@
 <android.support.v4.view.ViewPager
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/routes"
+    android:keepScreenOn="true"
     android:layout_width="match_parent"
     android:layout_height="120dp" />
 
