--- a/app/src/main/res/layout/route_widget.xml
+++ b/app/src/main/res/layout/route_widget.xml
@@ -1,9 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v4.view.ViewPager
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/routes"
-    android:keepScreenOn="true"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="120dp" />
+    android:layout_height="wrap_content">
 
+    <android.support.v4.view.ViewPager
+        android:id="@+id/routes"
+        android:keepScreenOn="true"
+        android:layout_width="match_parent"
+        android:layout_height="120dp" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/routes"
+        android:background="#ccc">
+
+        <Button
+            android:id="@+id/view_steps"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/view_steps"
+            style="?android:attr/buttonStyleSmall" />
+
+    </RelativeLayout>
+
+</RelativeLayout>
