adds destination to bottom of routing screen

--- a/app/src/main/res/layout/route_widget.xml
+++ b/app/src/main/res/layout/route_widget.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:background="@android:color/transparent"
+                android:layout_height="wrap_content">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/routes"
         android:keepScreenOn="true"
+        android:background="@android:color/black"
         android:layout_width="match_parent"
-        android:layout_height="120dp" />
+        android:layout_height="@dimen/route_header_hight"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -22,8 +24,22 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="@string/view_steps"
-            style="?android:attr/buttonStyleSmall" />
+            style="?android:attr/buttonStyleSmall"/>
 
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:background="@android:color/black"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/route_footer_hight">
+
+        <TextView
+            android:id="@+id/destination_name"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textColor="@android:color/white"
+            android:layout_margin="@dimen/default_margin"/>
     </RelativeLayout>
 
 </RelativeLayout>
