--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="default_margin">10dp</dimen>
     <dimen name="default_button_padding">10dp</dimen>
+    <dimen name="route_header_hight">120dp</dimen>
+    <dimen name="route_footer_hight">60dp</dimen>
 </resources>
