adds full distance to the bottom of the routing screen

--- a/app/src/main/res/layout/route_widget.xml
+++ b/app/src/main/res/layout/route_widget.xml
@@ -40,6 +40,14 @@
             android:layout_height="match_parent"
             android:textColor="@android:color/white"
             android:layout_margin="@dimen/default_margin"/>
+
+        <TextView
+            android:id="@+id/destination_distance"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textColor="@android:color/white"
+            android:layout_margin="@dimen/default_margin"/>
+
     </RelativeLayout>
 
 </RelativeLayout>
