--- a/app/src/main/res/layout/route_widget.xml
+++ b/app/src/main/res/layout/route_widget.xml
@@ -36,14 +36,15 @@
 
         <TextView
             android:id="@+id/destination_name"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textColor="@android:color/white"
             android:layout_margin="@dimen/default_margin"/>
 
         <TextView
             android:id="@+id/destination_distance"
-            android:layout_width="match_parent"
+            android:layout_toRightOf="@id/destination_name"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textColor="@android:color/white"
             android:layout_margin="@dimen/default_margin"/>
