--- a/app/src/main/res/layout/fragment_search_results.xml
+++ b/app/src/main/res/layout/fragment_search_results.xml
@@ -3,9 +3,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="wrap_content"
     android:id="@+id/results_wrapper">
+
     <RelativeLayout
+        android:id="@+id/multi_result_header"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:paddingTop="8dp"
@@ -33,7 +35,7 @@
 
     <android.support.v4.view.ViewPager
         android:id="@+id/results"
-        android:layout_height="wrap_content"
-        android:layout_width="fill_parent"
+        android:layout_height="75dp"
+        android:layout_width="match_parent"
         android:layout_gravity="bottom" />
 </LinearLayout>
