--- a/res/menu/options_menu.xml
+++ b/res/menu/options_menu.xml
@@ -5,4 +5,8 @@
           android:icon="@android:drawable/ic_menu_search"
           android:showAsAction="collapseActionView|ifRoom"
           android:actionViewClass="android.widget.SearchView" />
+    <item android:id="@+id/debug_toggle"
+          android:title="@string/debug_toggle_title"
+          android:icon="@android:drawable/ic_menu_preferences"
+          android:showAsAction="collapseActionView|ifRoom" />
 </menu>
