Updates start navigation layout
* Adds "Start" text below let's go icon.
* Adds pressed state for "Start" text and icon.
* Updates text sizes, margins, and padding.
* Removes view holder from ItemFragment.
* Uses Butterknife for view injection.
* Adds tests for view components.

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,3 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="lets_go_light_blue">#50a4db</color>
+    <color name="lets_go_dark_blue">#007bb2</color>
 </resources>
