--- a/res/layout/route_widget.xml
+++ b/res/layout/route_widget.xml
@@ -38,7 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:background="@android:color/transparent"
+            android:background="@drawable/item_background_holo_light"
             android:contentDescription="@string/overflow_menu"
             android:src="@drawable/ic_menu_moreoverflow_normal_holo_light" />
 
