--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -1,21 +1,19 @@
-<PreferenceScreen
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <PreferenceCategory
-        android:title="@string/settings_debug_title">
+    <PreferenceCategory android:title="@string/settings_debug_title">
 
         <CheckBoxPreference
             android:key="@string/settings_key_debug"
-            android:title="@string/settings_debug_mode"
-            android:summary="@string/settings_debug_mode_summary" />
+            android:summary="@string/settings_debug_mode_summary"
+            android:title="@string/settings_debug_mode" />
 
         <EditTextPreference
-            android:key="@string/settings_key_walking_advance_radius"
-            android:title="@string/settings_walking_advance_radius"
-            android:summary="@string/settings_walking_advance_radius_summary"
-            android:numeric="integer"
             android:defaultValue="15"
-            android:dialogTitle="@string/settings_walking_advance_radius_dialog_title" />
+            android:dialogTitle="@string/settings_walking_advance_radius_dialog_title"
+            android:key="@string/settings_key_walking_advance_radius"
+            android:numeric="integer"
+            android:summary="@string/settings_walking_advance_radius_summary"
+            android:title="@string/settings_walking_advance_radius" />
 
     </PreferenceCategory>
 
