--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="default_margin">10dp</dimen>
+    <dimen name="default_padding_vertical">8dp</dimen>
+    <dimen name="default_padding_horizontal">16dp</dimen>
     <dimen name="default_button_padding">10dp</dimen>
     <dimen name="route_header_height">120dp</dimen>
     <dimen name="route_footer_height">60dp</dimen>
