--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -12,6 +12,7 @@
             android:dialogTitle="@string/settings_walking_advance_radius_dialog_title"
             android:key="@string/settings_key_walking_advance_radius"
             android:numeric="integer"
+            android:inputType="number"
             android:summary="@string/settings_walking_advance_radius_summary"
             android:title="@string/settings_walking_advance_radius" />
 
