--- a/res/layout/fragment_search_results.xml
+++ b/res/layout/fragment_search_results.xml
@@ -28,7 +28,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:background="@android:color/darker_gray"
+            android:background="@android:color/transparent"
+            android:textColor="@color/view_all"
             android:text="@string/view_all" />
     </RelativeLayout>
 
