adds top border to search
* https://trello.com/c/3hfsUAGZ/131-add-a-grey-top-border-to-the-single-result-view-bottom-panel-7c7c7c-1pt

--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="default_button_padding">10dp</dimen>
     <dimen name="route_header_height">120dp</dimen>
     <dimen name="route_footer_height">60dp</dimen>
+    <dimen name="search_border_width">1dp</dimen>
 </resources>
