--- a/res/layout/fragment_search_results.xml
+++ b/res/layout/fragment_search_results.xml
@@ -3,6 +3,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/search_top_border"
+    android:paddingTop="@dimen/search_border_width"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -35,6 +37,7 @@
 
     <android.support.v4.view.ViewPager
         android:id="@+id/results"
+        android:background="@android:color/white"
         android:layout_width="match_parent"
         android:layout_height="72dp"
         android:layout_gravity="bottom" />
