--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="lets_go_dark_blue">#007bb2</color>
     <color name="light_gray">#ddd</color>
     <color name="dark_gray">#333</color>
-    <color name="destination_green">#68a547</color>
+    <color name="search_top_border">#7c7c7c</color>
 </resources>
