--- a/res/layout/instruction.xml
+++ b/res/layout/instruction.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_gravity="fill_horizontal"
     android:layout_width="match_parent"
-    android:layout_height="120dp">
+    android:layout_height="120dp"
+    android:layout_gravity="fill_horizontal">
 
     <ImageButton
         android:id="@+id/route_previous"
