--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="lets_go_light_blue">#50a4db</color>
     <color name="lets_go_dark_blue">#007bb2</color>
-    <color name="view_all_light_gray">#ddd</color>
-    <color name="view_all_dark_gray">#333</color>
+    <color name="light_gray">#ddd</color>
+    <color name="dark_gray">#333</color>
+    <color name="destination_green">#68a547</color>
 </resources>
