--- a/res/menu/options_menu.xml
+++ b/res/menu/options_menu.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
     <item android:id="@+id/search"
           android:title="@string/search_title"
-          android:icon="@android:drawable/ic_menu_search"
+          android:icon="@drawable/ic_action_search"
           android:showAsAction="collapseActionView|ifRoom"
           android:actionViewClass="android.widget.SearchView" />
+
     <item android:id="@+id/settings"
           android:title="@string/settings"
-          android:icon="@android:drawable/ic_menu_preferences"
           android:showAsAction="never" />
+
 </menu>
