Adds custom action bar background with shadow.

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -12,10 +12,11 @@
         <item name="android:actionModeSplitBackground">@drawable/cab_background_bottom_mapzen</item>
         <item name="android:actionModeCloseButtonStyle">@style/ActionButton.CloseMode.Mapzen</item>
         <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:buttonStyle">@android:style/Widget.Button</item>
     </style>
 
     <style name="ActionBar.Solid.Mapzen" parent="@android:style/Widget.Holo.Light.ActionBar.Solid">
-        <item name="android:background">@drawable/ab_solid_mapzen</item>
+        <item name="android:background">@drawable/ab_background_white_shadow</item>
         <item name="android:backgroundStacked">@drawable/ab_stacked_solid_mapzen</item>
         <item name="android:backgroundSplit">@drawable/ab_bottom_solid_mapzen</item>
         <item name="android:progressBarStyle">@style/ProgressBar.Mapzen</item>
