--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -7,6 +7,12 @@
             android:summary="@string/settings_debug_mode_summary"
             android:title="@string/settings_debug_mode" />
 
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="@string/settings_voice_navigation_key"
+            android:summary="@string/settings_voice_navigation_summary"
+            android:title="@string/settings_voice_navigation_title" />
+
         <EditTextPreference
             android:dialogTitle="@string/settings_walking_advance_radius_dialog_title"
             android:key="@string/settings_key_walking_advance_radius"
