--- a/res/layout/route_widget.xml
+++ b/res/layout/route_widget.xml
@@ -11,25 +11,27 @@
         android:layout_height="@dimen/route_header_height"
         android:keepScreenOn="true" />
 
-    <RelativeLayout
+    <LinearLayout
+        android:id="@+id/footer"
         android:layout_width="match_parent"
         android:layout_height="@dimen/route_footer_height"
         android:layout_alignParentBottom="true"
-        android:background="@android:color/white">
-
-        <View
-            android:id="@+id/divider"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/divider_height"
-            android:layout_alignParentTop="true"
-            android:background="@color/dark_gray" />
+        android:background="@android:color/white"
+        android:orientation="horizontal"
+        android:paddingTop="@dimen/default_padding_vertical"
+        android:paddingBottom="@dimen/default_padding_vertical"
+        android:paddingLeft="@dimen/default_padding_horizontal"
+        android:paddingRight="@dimen/narrow_padding_horizontal">
 
         <TextView
             android:id="@+id/destination_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/default_padding_horizontal"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:singleLine="true"
             android:textSize="16sp"
             android:textColor="@android:color/black" />
 
@@ -37,9 +39,9 @@
             android:id="@+id/destination_distance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
+            android:layout_gravity="center_vertical"
             android:layout_marginLeft="@dimen/narrow_padding_horizontal"
-            android:layout_toRightOf="@id/destination_name"
+            android:layout_weight="0"
             android:textSize="16sp"
             android:textColor="@android:color/black" />
 
@@ -47,13 +49,20 @@
             android:id="@+id/overflow_menu"
             android:layout_width="@dimen/icon_width"
             android:layout_height="@dimen/icon_height"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="@dimen/narrow_padding_horizontal"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/narrow_padding_horizontal"
+            android:layout_weight="0"
             android:background="@drawable/selectable_background_mapzen"
             android:contentDescription="@string/overflow_menu"
             android:src="@drawable/ic_menu_moreoverflow_normal_holo_light" />
 
-    </RelativeLayout>
+    </LinearLayout>
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/divider_height"
+        android:layout_above="@id/footer"
+        android:background="@color/dark_gray" />
 
 </RelativeLayout>
