adding a quick debug screen

--- a/res/layout/base.xml
+++ b/res/layout/base.xml
@@ -12,10 +12,10 @@
 
     <fragment
         android:id="@+id/map_fragment"
-        android:layout_above="@id/pager_results_container"
+        class="com.mapzen.fragment.MapFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        class="com.mapzen.fragment.MapFragment" />
+        android:layout_above="@id/pager_results_container" />
 
     <FrameLayout
         android:id="@+id/routes_container"
@@ -31,5 +31,15 @@
         android:id="@+id/settings"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <TextView
+        android:id="@+id/debugging"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="100dp"
+        android:background="#66000000"
+        android:textColor="@android:color/white"
+        android:visibility="gone" />
 
 </RelativeLayout>
