--- a/res/layout/instruction.xml
+++ b/res/layout/instruction.xml
@@ -12,6 +12,14 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/default_margin" />
 
+    <ImageView
+        android:id="@+id/turn_icon_after_action"
+        android:contentDescription="@string/route_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_margin="@dimen/default_margin" />
+
     <TextView
         android:id="@+id/full_instruction"
         android:layout_width="0dip"
@@ -19,6 +27,16 @@
         android:textColor="@android:color/white"
         android:textSize="20sp"
         android:layout_margin="@dimen/default_margin"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/full_instruction_after_action"
+        android:layout_width="0dip"
+        android:layout_weight="1"
+        android:textColor="@android:color/white"
+        android:textSize="20sp"
+        android:layout_margin="@dimen/default_margin"
+        android:visibility="gone"
         android:layout_height="wrap_content" />
 
  </LinearLayout>
