updated name and new wgt file

--- a/res/xml/accessoryservices.xml
+++ b/res/xml/accessoryservices.xml
@@ -1,5 +1,5 @@
 <resources>
-    <application name="GearProvider">
+    <application name="MapzenGearProvider">
     <serviceProfile
         name="smartview"
         role="provider"
