--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -31,11 +31,12 @@
             android:summary="@string/settings_voice_navigation_summary"
             android:title="@string/settings_voice_navigation_title" />
 
-        <EditTextPreference
+        <com.mapzen.widget.EditIntPreference
             android:dialogTitle="@string/settings_walking_advance_radius_dialog_title"
             android:inputType="number"
             android:key="@string/settings_key_walking_advance_radius"
             android:numeric="integer"
+            android:defaultValue="@integer/route_walking_advance_radius"
             android:summary="@string/settings_walking_advance_radius_summary"
             android:title="@string/settings_walking_advance_radius" />
 
