adds an oauth flow to submit traces from routes

--- a/res/menu/options_menu.xml
+++ b/res/menu/options_menu.xml
@@ -15,4 +15,13 @@
         android:title="@string/submit_data"
         android:showAsAction="never" />
 
+    <item android:id="@+id/login"
+        android:title="@string/osm_login"
+        android:showAsAction="never" />
+
+    <item android:id="@+id/logout"
+        android:title="@string/osm_logout"
+        android:visible="false"
+        android:showAsAction="never" />
+
 </menu>
