Adds zoom prefs.

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -44,4 +44,43 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory android:title="@string/settings_zoom_title">
+
+        <com.mapzen.widget.EditIntPreference
+            android:defaultValue="@integer/zoom_walking"
+            android:key="@string/settings_zoom_walking_key"
+            android:title="@string/settings_zoom_walking_title" />
+
+        <com.mapzen.widget.EditIntPreference
+            android:defaultValue="@integer/zoom_biking"
+            android:key="@string/settings_zoom_biking_key"
+            android:title="@string/settings_zoom_biking_title" />
+
+        <com.mapzen.widget.EditIntPreference
+            android:defaultValue="@integer/zoom_driving_0_to_15"
+            android:key="@string/settings_zoom_driving_0_to_15_key"
+            android:title="@string/settings_zoom_driving_0_to_15_title" />
+
+        <com.mapzen.widget.EditIntPreference
+            android:defaultValue="@integer/zoom_driving_15_to_25"
+            android:key="@string/settings_zoom_driving_15_to_25_key"
+            android:title="@string/settings_zoom_driving_15_to_25_title" />
+
+        <com.mapzen.widget.EditIntPreference
+            android:defaultValue="@integer/zoom_driving_25_to_35"
+            android:key="@string/settings_zoom_driving_25_to_35_key"
+            android:title="@string/settings_zoom_driving_25_to_35_title" />
+
+        <com.mapzen.widget.EditIntPreference
+            android:defaultValue="@integer/zoom_driving_35_to_50"
+            android:key="@string/settings_zoom_driving_35_to_50_key"
+            android:title="@string/settings_zoom_driving_35_to_50_title" />
+
+        <com.mapzen.widget.EditIntPreference
+            android:defaultValue="@integer/zoom_driving_over_50"
+            android:key="@string/settings_zoom_driving_over_50_key"
+            android:title="@string/settings_zoom_driving_over_50_title" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
