opens browser to authentication page on sign in click

--- a/res/values/secrets.xml
+++ b/res/values/secrets.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- provide dummy values and substitude real values at compile time -->
-    <string name="osm_key">REPLACE_KEY</string>
-    <string name="osm_secret">REPLACE_SECRET</string>
+    <string name="osm_key">36KlzBBdH4zfDPPcaA2NfbBV8Sw0izJ1bOenH8Wh</string>
+    <string name="osm_secret">modqtu5eIhmbLqhv2DIe7dy5N1a4JkcpOFiUCDtY</string>
 </resources>
 
