adds reverse route button

--- a/res/layout/route_preview.xml
+++ b/res/layout/route_preview.xml
@@ -13,5 +13,10 @@
         android:id="@+id/destination"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/route_reverse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="reverse route" />
 
 </LinearLayout>
